DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2006-04-14 aronb    Added a socket option for sending broadcast UDP packets.
                    NEW VERSION: 1.1.17
2006-02-15 patrickh Replaced vpr::ThreadMemberFunctor<T> and
                    vpr::ThreadNonMemberFunctor by Boost.Function.
                    NEW VERSION: 1.1.16
2005-12-21 aronb    Added vpr::BufferObjectReader::STRING_SIZE_LENGTH and
                    vpr::BufferObjectWriter::STRING_SIZE_LENGTH.
                    NEW VERSION: 1.1.15
2005-12-14 patrickh Removed vpr::InetAddrBase.
                    NEW VERSION: 1.1.14
2005-12-12 patrickh Changed the signatures of vpr::InetAddr::getLocalHost(),
                    vpr::InetAddr::getAllLocalAddrs(), and
                    vpr::InetAddr::getHostname() to return a result rather than
                    to take the result storage as a by-reference parameter.
                    NEW VERSION: 1.1.13
2005-12-11 patrickh Added vpr::InetAddr::getAllLocalAddrs().
                    NEW VERSION: 1.1.12
2005-12-09 patrickh Added vpr::IllegalArgumentException.
                    NEW VERSION: 1.1.11
2005-11-12 patrickh vpr::Library and vpr::LibraryLoader functions now throw
                    exceptions instead of returning vpr::ReturnStatus.
                    NEW VERSION: 1.1.10
2005-10-28 allenb   Fixed up bugs in BSD Socket related to async connection,
                    isConnected, and exceptions thrown.
                    NEW VERSION: 1.1.9
2005-08-25 patrickh Added execption throwing to vpr::ObjectReader,
                    vpr::ObjectWriter, and types derived therefrom.
                    NEW VERSION: 1.1.8
2005-08-24 patrickh Added throw() clause to vpr::ReadableObject::readObject(),
                    to vpr::WriteableObject::writeObject(), and to the
                    destructor for each of those classes.
                    NEW VERSION: 1.1.7